# bike_sharing_project

./: README.md  pyproject.toml
src/bike_analyzer/: __main__.py  data_manager.py  main.py  model.py  plotter.py
src/bike_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
