[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bike_analyzer"
version = "0.1.0"
description = "Bike Sharing Analysis: environmental impact on total rental bikes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
]

[project.scripts]
bike-analysis = "bike_analyzer.__main__:main"